[gd_scene load_steps=22 format=3 uid="uid://c8e62vxok360v"]

[ext_resource type="Script" uid="uid://bg0ludbwq8aum" path="res://Scritps/StateScript/Player.gd" id="1_0tgkt"]
[ext_resource type="Script" uid="uid://cxgbg04oq4klp" path="res://Scritps/character_movement_stats.gd" id="2_in17e"]
[ext_resource type="Texture2D" uid="uid://0n56ntaimlqr" path="res://kenney_scribble-platformer/PNG/Default/character_roundYellow.png" id="3_gg1oa"]
[ext_resource type="Texture2D" uid="uid://72bo3f3sl4qk" path="res://icon.svg" id="4_in17e"]
[ext_resource type="Script" uid="uid://w61e2uqdtq6e" path="res://Scritps/StateScript/state_machine.gd" id="4_x5e4g"]
[ext_resource type="Script" uid="uid://hpcjkrqfmg83" path="res://Scritps/camera_2d.gd" id="5_abehq"]
[ext_resource type="Script" uid="uid://cli6b1yhnihm5" path="res://Scritps/StateScript/Estados/idle_state.gd" id="5_s6se4"]
[ext_resource type="Script" uid="uid://dlp608y0mwlvr" path="res://Scritps/StateScript/Estados/move_state.gd" id="6_abehq"]
[ext_resource type="Script" uid="uid://ba2cjrehf4fvc" path="res://Scritps/StateScript/Estados/jump_state.gd" id="7_d1mg0"]
[ext_resource type="Script" uid="uid://bo87ouky3jfkh" path="res://Scritps/StateScript/Estados/fall_state.gd" id="8_78bmn"]
[ext_resource type="Script" uid="uid://dcomnvrmvd1gk" path="res://Scritps/StateScript/Estados/coyote_state.gd" id="9_7e4ss"]
[ext_resource type="Script" uid="uid://cb8e8avgvond0" path="res://Scritps/StateScript/Estados/buffer_state.gd" id="10_2siam"]
[ext_resource type="Script" uid="uid://etm3cwipbqox" path="res://Scritps/StateScript/Estados/wall_slide_state.gd" id="11_aw0j8"]
[ext_resource type="Script" uid="uid://dkrgj174oc2sy" path="res://Scritps/StateScript/Estados/wall_jump_state.gd" id="12_lnye5"]
[ext_resource type="Script" uid="uid://dsu24jk2xvjev" path="res://Scritps/StateScript/Estados/shoot_idle_state.gd" id="13_leh87"]
[ext_resource type="Script" uid="uid://btoh2y12ilnt0" path="res://Scritps/StateScript/Estados/shoot_move_state.gd" id="15_gg1oa"]
[ext_resource type="Script" uid="uid://cwnjdf14ouwl5" path="res://Scritps/StateScript/Estados/shoot_fall_state.gd" id="16_x5e4g"]
[ext_resource type="Script" uid="uid://cdun281xaf1ld" path="res://Scritps/StateScript/Estados/shoot_jump_state.gd" id="17_s6se4"]
[ext_resource type="Script" uid="uid://jokrbc6mowin" path="res://Scritps/StateScript/Estados/shoot_buffer_state.gd" id="19_d1mg0"]

[sub_resource type="Resource" id="Resource_5pq2n"]
script = ExtResource("2_in17e")
input_direction = 0.0
target_speed = 0.0
move_speed = 500.0
move_speedTop = 500.0
acceleration_speed = 5000.0
decceleration_speed = 5000.0
jump_speed = -550.0
coyote_time_actived = false
was_on_ground = false
jump_wall_actived = false
was_wall_R = false
was_wall_L = false
correct_corner = 10.0
wall_slide_speed = 200.0
wall_jumpV_force = -500.0
wall_jumpH_force = -500.0
wall_jumpHL_force = 500.0
time_between_shoot = 0.25
can_shoot = false
rotation_point_shoot = 180.0
bulletDirection = Vector2(1, 0)
metadata/_custom_type_script = "uid://cxgbg04oq4klp"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s6se4"]
radius = 11.0
height = 60.0

[node name="Player" type="CharacterBody2D"]
safe_margin = 0.14
script = ExtResource("1_0tgkt")
movement_stats = SubResource("Resource_5pq2n")

[node name="body" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="body"]
texture_filter = 1
texture = ExtResource("3_gg1oa")

[node name="ShootPoint" type="Marker2D" parent="body"]
position = Vector2(25, -5)

[node name="Sprite2D" type="Sprite2D" parent="body/ShootPoint"]
scale = Vector2(0.065, 0.065)
texture = ExtResource("4_in17e")

[node name="LowBody" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_s6se4")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("5_abehq")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("default_state")]
script = ExtResource("4_x5e4g")
default_state = NodePath("Idle_State")

[node name="Idle_State" type="Node" parent="StateMachine"]
script = ExtResource("5_s6se4")

[node name="Move_State" type="Node" parent="StateMachine"]
script = ExtResource("6_abehq")

[node name="Jump_State" type="Node" parent="StateMachine"]
script = ExtResource("7_d1mg0")

[node name="Fall_State" type="Node" parent="StateMachine"]
script = ExtResource("8_78bmn")

[node name="Coyote_State" type="Node" parent="StateMachine"]
script = ExtResource("9_7e4ss")

[node name="Buffer_State" type="Node" parent="StateMachine"]
script = ExtResource("10_2siam")

[node name="WallSlide_State" type="Node" parent="StateMachine"]
script = ExtResource("11_aw0j8")

[node name="WallJump_State" type="Node" parent="StateMachine"]
script = ExtResource("12_lnye5")

[node name="ShootIdle_State" type="Node" parent="StateMachine"]
script = ExtResource("13_leh87")

[node name="ShootMove_State" type="Node" parent="StateMachine"]
script = ExtResource("15_gg1oa")

[node name="ShootFall_State" type="Node" parent="StateMachine"]
script = ExtResource("16_x5e4g")

[node name="ShootJump_State" type="Node" parent="StateMachine"]
script = ExtResource("17_s6se4")

[node name="ShootBuffer_State" type="Node" parent="StateMachine"]
script = ExtResource("19_d1mg0")

[node name="Coyote Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Jumper Buffer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="WallTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]

[node name="ShootCoolDown" type="Timer" parent="."]
wait_time = 0.4

[node name="Corner_Right_Control" type="RayCast2D" parent="."]
position = Vector2(9, 0)
rotation = -3.14159
collision_mask = 7
hit_from_inside = true

[node name="Corner_Left_Control" type="RayCast2D" parent="."]
position = Vector2(-9, 0)
rotation = -3.14159
collision_mask = 7
hit_from_inside = true

[node name="Buffer_Control" type="RayCast2D" parent="."]
position = Vector2(0, 30)
target_position = Vector2(0, 30)
collision_mask = 7
hit_from_inside = true

[node name="Coyote_Control L" type="RayCast2D" parent="."]
modulate = Color(0.616667, 1, 0, 1)
position = Vector2(-2, 30)
target_position = Vector2(0, 15)
collision_mask = 7
hit_from_inside = true

[node name="Coyote_Control R" type="RayCast2D" parent="."]
modulate = Color(0.616667, 1, 0, 1)
position = Vector2(2, 30)
target_position = Vector2(0, 15)
collision_mask = 7
hit_from_inside = true

[node name="Wall_ControllerR" type="RayCast2D" parent="."]
position = Vector2(0, 30)
target_position = Vector2(14, 0)
collision_mask = 8
hit_from_inside = true

[node name="Wall_ControllerL" type="RayCast2D" parent="."]
modulate = Color(1, 0, 1, 1)
position = Vector2(0, 30)
rotation = -3.14159
target_position = Vector2(14, 0)
collision_mask = 8
hit_from_inside = true

[node name="Wall_ControllerRc" type="RayCast2D" parent="."]
position = Vector2(0, -40.965)
target_position = Vector2(14, 0)
collision_mask = 8
hit_from_inside = true

[node name="Wall_ControllerLc" type="RayCast2D" parent="."]
modulate = Color(1, 0, 1, 1)
position = Vector2(0, -40.965)
rotation = -3.14159
target_position = Vector2(14, 0)
collision_mask = 8
hit_from_inside = true
